Removed drop shadow from portfolio projects Fixed footer alignment

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -101,9 +101,6 @@ h1, h2, h3, h4, h5 {
   position: relative;
 
   .project-container {
-    -webkit-box-shadow: 6px 6px 6px 1px rgba(0,0,0,0.25);
-    -moz-box-shadow: 6px 6px 6px 1px rgba(0,0,0,0.25);
-    box-shadow: 6px 6px 6px 1px rgba(0,0,0,0.25);
     margin-bottom: 4.5em;
     padding: 1.25em;
   }
@@ -320,18 +317,20 @@ a#scroll-down {
   box-shadow: none;
   padding: 0;
 }
+
 nav.navbar-inverse {
   background-image: none;
   border: 0;
   background-color: rgba(0,0,0,0.9);
 }
+
 .navbar-inverse .navbar-nav > .active,
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   background-image: none;
-  //color: $orange;
 }
+
 ul.dropdown-menu {
   background-color: #080808;
   li > a {
